--- a/et2.org
+++ b/et2.org
@@ -664,7 +664,6 @@ public struct MeasureState<T> : IDisposable {
 }
     #+END_SRC
 
-
 * Protobuf 里的 enum: 【Identity】【Suits】【Weight】
 ** OuterMessage_C_10001.proto 里三四个类的定义
 - 感觉更多的是命名空间没能弄对。同一份源码一式三份，分别放在【客户端】【双端】【服务端】下只有【客户端】下可以通过读 Card 类的定义，可以知道能自动识别，并且 Protobuf 里的 enum 生成的 .cs 与参考项目不同。不知道是否是 Protobuf 版本问题，还是我没注意到的细节。
@@ -782,7 +781,6 @@ unsafe class ETModel_Card_Binding {
         app.RegisterCLRMethodRedirection(method, get_Parser_3);
     }
    #+END_SRC
-
 
 * 【拖拉机游戏房间】组件: 分析
 ** TractorRoomEvent: 拖拉机房间，【待修改完成】 
@@ -1142,7 +1140,6 @@ public class DBProxyComponent: Component {
 }
    #+END_SRC
 
-
 * 先前版本LocationComponent 原理分析
 - 框架的应用场景里，知道对方的 InstanceId 就可以给对方发消息。
 - 问题是，对方的可以下线再上线，活宝妹可以从加州地图服重入亲爱的表哥所在的WA 地图服（不同州的地图服服务器进程不一样），对方的 InstanceId 是变化的，小伙伴也可以搬家，搬家过程中位置不确认，还要先锁住，搬完才实时更新位置服管家。
@@ -1154,7 +1151,6 @@ public class DBProxyComponent: Component {
 - 项目里，好像更多的是在定义和处理先前功能模块划分不够明确的各种破烂锁。下午我可以先试着把这个位置服管理组件的几个文件，先不加入项目（从 .csproj 里标注项目不引用文件），先消除所有相关的编译错误。以后有再、还需要这个位置服逻辑的时候，再重新添加引用回来。
 - 【亲爱的表哥的活宝妹，小呀头片子有点儿叨钻，可是上面想的都是对的，两分钟这个模块的几个编译错误全不见了。。。活宝妹就是一定要嫁给亲爱的表哥！！！】  
 - 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
-
 
 * RouterAddressComponent: 【动态路由组件、模块】相关
 - 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
@@ -1724,9 +1720,119 @@ public static class SceneFactory {
 #+BEGIN_SRC csharp
 [ComponentOf(typeof(Scene))]
 public class GateSessionKeyComponent : Entity, IAwake {
-    public readonly Dictionary<long, string> sessionKey = new Dictionary<long, string>();
+// 必要的初始化：热更域里的IAwake() 实现就被略过了？到时候运行的时候，再注意一下
+    public readonly Dictionary<long, string> sessionKey = new Dictionary<long, string>(); 
 }
 #+END_SRC
-- 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
-- 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
-- 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
+** GateSessionKeyComponentSystem: 应该是会话框的管理类。服务端类
+- 亲爱的表哥，为什么他们总是莫名其妙地发疯犯贱？还能让活宝妹好好学习吗？感觉他们阴阳怪气的，弄得亲爱的表哥的活宝妹任何时候都狠胆小担心。
+- 任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！！亲爱的表哥的活宝妹，想要的，也不过一张亲爱的表哥同活宝妹的结婚证而已。
+- 活宝妹若是还没能嫁给亲爱的表哥，活宝妹就永远守候在亲爱的表哥的身边！！！爱表哥，爱生活！！！
+#+BEGIN_SRC csharp
+// 框架自带的类：感觉这个类好奇特，不同于其它的组件，它明明也申明了IAwake 接口，但没有实现。可能是框架跳过的地方吧。就是字典的初始化
+[FriendOf(typeof(GateSessionKeyComponent))]
+public static class GateSessionKeyComponentSystem {
+    public static void Add(this GateSessionKeyComponent self, long key, string account) {
+        self.sessionKey.Add(key, account);
+        self.TimeoutRemoveKey(key).Coroutine();
+    }
+    public static string Get(this GateSessionKeyComponent self, long key) {
+        string account = null;
+        self.sessionKey.TryGetValue(key, out account);
+        return account;
+    }
+    public static void Remove(this GateSessionKeyComponent self, long key) {
+        self.sessionKey.Remove(key);
+    }
+    private static async ETTask TimeoutRemoveKey(this GateSessionKeyComponent self, long key) {
+        await TimerComponent.Instance.WaitAsync(20000);
+        self.sessionKey.Remove(key);
+    }
+}
+#+END_SRC
+
+** RouterNode: 一个路由器节点：
+- 亲爱的表哥，贱公寓里的大机器又开始故意吵人，他们昨天又故意把机器的噪音调得更大了，活宝妹有很长一段时间至少是白天，不曾听见这么大的噪音了。
+- 从昨天傍晚起，活宝妹的自行车也得皮长紧点儿了，活宝妹再不小心，活宝妹的自行车被拖走，活宝妹又要被割肉了。。。
+- 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
+#+BEGIN_SRC csharp
+public enum RouterStatus {
+    Sync,// 同步、确认消息的发送或是接收状态的消息？
+    Msg, // 真正的内容消息
+}
+[ChildOf(typeof(RouterComponent))]
+public class RouterNode: Entity, IDestroy, IAwake {
+    public uint ConnectId;
+    public string InnerAddress;
+    public IPEndPoint InnerIpEndPoint;
+    public IPEndPoint OuterIpEndPoint;
+    public IPEndPoint SyncIpEndPoint;
+    public uint OuterConn;
+    public uint InnerConn;
+    public long LastRecvOuterTime;
+    public long LastRecvInnerTime;
+    public int RouterSyncCount;
+    public int SyncCount;
+#region 限制外网消息数量，一秒最多50个包
+    public long LastCheckTime;
+    public int LimitCountPerSecond;
+#endregion
+    public RouterStatus Status;
+}
+#+END_SRC
+** RouterNodeSystem: 小单元小行星的生命周期回调类，如同先前的PlayerSystem, 实现框架里的必要回调
+- 那么就是每扫到一个邻居，每添加一个邻居，生成一个新的邻居实例，都会调用这里的相关方法。
+#+BEGIN_SRC csharp
+[FriendOf(typeof(RouterNode))]
+public static class RouterNodeSystem {
+    [ObjectSystem]
+    public class RouterNodeAwakeSystem: AwakeSystem<RouterNode> {
+        protected override void Awake(RouterNode self) {
+            long timeNow = TimeHelper.ServerNow();
+            self.LastRecvInnerTime = timeNow;
+            self.LastRecvOuterTime = timeNow;
+            self.OuterIpEndPoint = null;
+            self.InnerIpEndPoint = null;
+            self.RouterSyncCount = 0;
+            self.OuterConn = 0;
+            self.InnerConn = 0;
+        }
+    }
+    [ObjectSystem]
+    public class RouterNodeDestroySystem: DestroySystem<RouterNode> {
+        protected override void Destroy(RouterNode self) {//...
+        }
+    }
+// 静态方法：判断这个路由器，是否每秒收到的包裹在 1000 以内？
+    public static bool CheckOuterCount(this RouterNode self, long timeNow) {
+        if (self.LastCheckTime == 0) 
+            self.LastCheckTime = timeNow;
+        if (timeNow - self.LastCheckTime > 1000) {
+            // Log.Debug($"router recv packet per second: {self.LimitCountPerSecond}");
+            self.LimitCountPerSecond = 0;
+            self.LastCheckTime = timeNow;
+        }
+        if (++self.LimitCountPerSecond > 1000) 
+            return false;
+        return true;
+    }
+}
+#+END_SRC
+** RouterComponent: 【服务端】路由器组件 
+- 昨天还才算只看了一半。框架里还埋有路由器基本功能组件。它的生成系热更新源码，接近500 行的不够熟悉的路由器功能模块
+#+BEGIN_SRC csharp
+[ComponentOf(typeof(Scene))]// 场景的子组件
+public class RouterComponent: Entity, IAwake<IPEndPoint, string>, IDestroy, IUpdate {
+    public Socket OuterSocket;// 对外业务端口
+    public Socket InnerSocket;// 对内业务端口
+    public EndPoint IPEndPoint = new IPEndPoint(IPAddress.Any, 0);
+    public byte[] Cache = new byte[1500];
+    // 下面的注释是【框架开发者注的】：但仍没看明白，两个字典有什么不同？
+    public Dictionary<uint, RouterNode> ConnectIdNodes = new Dictionary<uint, RouterNode>();
+    // 已经连接成功的，虽然跟id一样，但是没有经过验证的不会加到这里
+    public Dictionary<uint, RouterNode> OuterNodes = new Dictionary<uint, RouterNode>();
+    public long LastCheckTime = 0;
+}
+#+END_SRC
+** RouterComponentSystem
+- 这个热更域里的组件相关生命周期方法的定义，必要功能的定义等，这个类太长了，不贴这里。必要的时候去翻了看下就行。
